Add GUI (JavaFX)