@@ -2,3 +2,12 @@
 
 ## 12. Feladat
 Egy kertészet növényeket értékesít. A vásárlók, ha van elég pénzük, meg tudják venni a növényeket. Ha a vásárlónak van kedvezményre jogosító kártyája, akkor 25% kedvezménnyel vásárolhat. A vásárlók kaphatnak fizetést, akkor ennyivel több pénze lesz vásárlásra. Ha nem adtuk meg a kezdő összeget egy vásárlónál, akkor az 10 000 Ft összeggel rendelkezik. Egyébként megadhatjuk, hogy mennyi a kezdő tőke. A kertészet meg tudja adni a növényeinek listáját érték szerint rendezve. A kertészet jelenleg nem termel új növényeket, de az aktuális állapotát ki tudja írni egy bináris állományba. Amikor „létrejön” egy kertészet, akkor aktualizálja magát, ha van létező bináris állomány.
+
+
+JavaFX libraries add hozzá a projekthez.
+
+Java RUN paramétert add hozzá:
+
+```
+--add-modules=javafx.controls,javafx.fxml
+```
